mqtt-logger-k8s.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mqtt-logger
  labels:
    name: mqtt-logger
spec:
  replicas: 1
  selector:
    matchLabels:
      name: mqtt-logger
  template:
    metadata:
      labels:
        name: mqtt-logger
    spec:
      containers:
      - name: mqtt-logger-container
        image: 
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /persist
          name: mqtt-logger-volume
        - mountPath: /etc/mqtt-logger
          name: mqtt-config-volume
        - mountPath: /app/certs
          name: cert-volume
          #readOnly: true
      volumes:
        - name: mqtt-logger-volume
          persistentVolumeClaim:
            claimName: mqtt-logger-persistent-volume
        - name: mqtt-config-volume
          configMap:
            name: mqtt-logger-config
        - name: cert-volume
          secret:
            secretName: ca-cert

---

apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: '1'
  generation: 1
  labels:
    name: grafana
  name: grafana
  namespace: smad
  resourceVersion: '2152504528'
  selfLink: /apis/apps/v1/namespaces/smad/deployments/grafana
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: grafana
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: grafana
    spec:
      containers:
        - image: 'docker.io/grafana/grafana:10.2.0'
          imagePullPolicy: IfNotPresent
          name: grafana
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          name: grafana-config
        name: grafana-config
status:
  availableReplicas: 1
  conditions:
    - lastTransitionTime: '2023-11-05T11:44:33Z'
      lastUpdateTime: '2023-11-05T11:44:33Z'
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: 'True'
      type: Available
    - lastTransitionTime: '2023-11-05T11:44:13Z'
      lastUpdateTime: '2023-11-05T11:44:33Z'
      message: ReplicaSet "grafana-bc6c8d9" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: 'True'
      type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: timeseriesdb
  labels:
    name: timeseriesdb
spec:
  replicas: 1
  selector:
    matchLabels:
      name: timeseriesdb
  template:
    metadata:
      labels:
        name: timeseriesdb
    spec:
      containers:
      - name: timeseriesdb-container
        image: influxdb:2.7.1
        volumeMounts:
        - mountPath: /etc/influxdb2/config.yml
          name: timeseriesdb-config-volume
        - mountPath: /docker-entrypoint-initdb.d
          name: timeseriesdb-init-script-volume
        - mountPath: /var/lib/influxdb2
          name: timeseriesdb-varlib-volume
        - mountPath: /etc/influxdb2
          name: timeseriesdb-etc-volume
      volumes:
        - name: timeseriesdb-config-volume
          configMap:
            name: timeseriesdb-config
        - name: timeseriesdb-init-script-volume
          configMap:
            name: timeseriesdb-init-script
        - name: timeseriesdb-varlib-volume
          persistentVolumeClaim:
            claimName: timeseriesdb-varlib-pvc
        - name: timeseriesdb-etc-volume
          persistentVolumeClaim:
            claimName: timeseriesdb-etc-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: timeseriesdb-service
spec:
  selector:
    name: timeseriesdb
  ports:
    - name: tls
      port: 8086
      targetPort: 8086

---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    name: timeseriesdb-route
  name: timeseriesdb-route
  namespace: smad
spec:
  host: 
  port:
    targetPort: influx
  tls:
    termination: edge
    key: |-
    certificate: |-
    caCertificate: |-
  to:
    kind: Service
    name: timeseriesdb-outward-service
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - conditions:
        - lastTransitionTime: '2023-09-28T14:52:28Z'
          status: 'True'
          type: Admitted
      host: 
      routerName: router
      wildcardPolicy: None

---

kind: Service
apiVersion: v1
metadata:
  name: timeseriesdb-outward-service
  labels:
    name: timeseriesdb-outward-service
spec:
  selector:
    name: timeseriesdb
  ports:
    - port: 8086
      name: influx
  type: NodePort

---

apiVersion: v1
kind: Service
metadata:
  labels:
    name: timeseriesdb
  name: timeseriesdbi-inward-service
  namespace: smad
  resourceVersion: '2152501312'
  selfLink: /api/v1/namespaces/smad/services/timeseriesdb
spec:
  ports:
    - port: 8086
      protocol: TCP
      targetPort: 8086
  selector:
    name: timeseriesdb
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}

---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    name: grafana-route
  name: grafana-route
  namespace: smad
spec:
  host: 
  port:
    targetPort: grafana
  tls:
    termination: edge
    key: |-
    certificate: |-
    caCertificate: |-
  to:
    kind: Service
    name: grafana-outward-service
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - conditions:
        - lastTransitionTime: '2023-09-28T14:52:28Z'
          status: 'True'
          type: Admitted
      host: 
      routerName: router
      wildcardPolicy: None

---

kind: Service
apiVersion: v1
metadata:
  name: grafana-outward-service
  labels:
    name: grafana-outward-service
spec:
  selector:
    name: grafana
  ports:
    - port: 3000
      name: grafana
  type: NodePort
